--- a/esportivaMasc.html
+++ b/esportivaMasc.html
@@ -12,7 +12,7 @@
     <header id="header">
         <div class="cabecalhoUm">
             <div class="imagemLogo">
-                <img src="img/logoSene.png" alt="Logo meias sene">
+                <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
             </div>
             <div class="pesquisa">
                 <input class="procurando" type="text" placeholder="O que você está procurando?">
@@ -97,7 +97,7 @@
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Polo Masculina</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-marrom-azul">
+                        <div class="cores-branca-preta-cinza04">
                             <div class="pretaPolo"></div>
                             <div class="brancaPolo"></div>
                             <div class="cinzaPolo"></div>
@@ -115,56 +115,53 @@
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Aero Branca Masculina</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-vermelho-amarelo">
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza05">
                             <div class="brancaAero"></div>
                             <div class="pretaAero"></div>
                             <div class="cinzaAero"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-leao" id="div-meia">
-                    <div class="container"> <img src="img-baby/leaoAzul-turquesa.png" alt="Meia leão">
+                <div class="Quadrado-da-meia-esportiva-kit01" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaKit01.png" alt="Meia leão">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Leão Azul Turquesa Masculina</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-azulTurquesa-cinza">
-                            <div class="azulTurquesa"></div>
-                            <div class="cinzaMescla"></div>
-
+                        <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº1</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza06">
+                            <div class="cinzaKit01"></div>
+                            <div class="brancaKit01"></div>
+                            <div class="pretaKit01"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
+                        <h3 class="preco">R$ 18,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-kit1-0a6" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit1-desenhada0a6.png" alt="Kit 3 pares de meia">
+                <div class="Quadrado-da-meia-esportiva-cano-curto" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoBrancaLisa.png" alt="Meia marinheiro">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-kit-des-0a6">
-                            <div class="kit1Des0a6">
-                                <p>1</p>
-                            </div>
-                            <div class="kit2Des0a6">
-                                <p>2</p>
-                            </div>
+                        <h3 class="Subtitulo">Meia Esportiva Cano Curto Lisa Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza07">
+                            <div class="brancaCurto"></div>
+                            <div class="pretaCurto"></div>
+                            <div class="cinzaCurto"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,10</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -300,13 +297,15 @@
                 pretaAero: 'img-masculino/masculinaEsportivaPretaAero.png',
                 cinzaAero: 'img-masculino/masculinaEsportivaCinzaAero.png',
             },
-            'Quadrado-da-meia-leao': {
-                azulTurquesa: 'img-baby/leaoAzul-turquesa.png',
-                cinzaMescla: 'img-baby/leaoCinza-mescla.png'
+            'Quadrado-da-meia-esportiva-kit01': {
+                brancaKit01: 'img-masculino/masculinaEsportivaBrancaKit01.png',
+                pretaKit01: 'img-masculino/masculinaEsportivaPretaKit01.png',
+                cinzaKit01: 'img-masculino/masculinaEsportivaCinzaKit01.png'
             },
-            'Quadrado-da-meia-kit1-0a6': {
-                kit1Des0a6: 'img-baby/kit1-desenhada0a6.png',
-                kit2Des0a6: 'img-baby/kit2-desenhada0a6.png'
+            'Quadrado-da-meia-esportiva-cano-curto': {
+                brancaCurto: 'img-masculino/masculinaEsportivaCanoCurtoBrancaLisa.png',
+                pretaCurto: 'img-masculino/masculinaEsportivaCanoCurtoPretaLisa.png',
+                cinzaCurto: 'img-masculino/masculinaEsportivaCanoCurtoCinzaLisa.png'
             },
             'Quadrado-da-meia-kit1-6a12': {
                 kit1Des6a12: 'img-baby/kit1-desenhada6a12.png',
@@ -319,7 +318,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.brancaLisa, .pretaLisa, .cinzaLisa, .brancaHorse, .pretaHorse, .cinzaHorse, .brancaS, .pretaS, .cinzaS, .brancaPolo, .pretaPolo, .cinzaPolo, .brancaAreo, .pretaAero, .cinzaAero, .kit2Des6a12');
+            const cores = quadrado.querySelectorAll('.brancaLisa, .pretaLisa, .cinzaLisa, .brancaHorse, .pretaHorse, .cinzaHorse, .brancaS, .pretaS, .cinzaS, .brancaPolo, .pretaPolo, .cinzaPolo, .brancaAreo, .pretaAero, .cinzaAero, .brancaKit01, .pretaKit01, .cinzaKit01, .brancaCurto, .pretaCurto, .cinzaCurto');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -369,10 +368,10 @@
 
         });
 
-        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(cor => {
+        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(c => {
+                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
